--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "daisyui": "^2.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "router-dom": "^2.2.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
